    than 8.0 to get the same behaviour as for 8.0.
  * debian/control: Conflict to postgresql-7.4 << 1:7.4.8-5 since earlier
    versions do not support non-ASCII encodings (due to missing pg_encoding).
  * pg_ctlcluster: Check that the cluster owner uid/gid really exist.
    Closes: #311546
  * pg_lsclusters: Ensure that there is at least one space between the colums.

 -- Martin Pitt <mpitt@debian.org>  Fri,  3 Jun 2005 00:03:57 +0200

postgresql-common (12) experimental; urgency=low

  * pg_ctlcluster: Remove "status" command, it's not documented and not
    really useful.
  * PgCommon: Fix cluster_info for avac_logfile to make pg_dropcluster clean
    away the autovacuum log file.
  * pg_maintenance: -v only influences vacuumdb output now, always show
    clusters.
  * Added a test suite:
    - Test scripts are in tests/*.
    - Expected output is in tests/*.ex.
    - Test suite is run with './testsuite' as root.
  * pg_createcluster:
    - Converted optional third parameter to option --datadir.
    - Rework POD to have a separate OPTIONS section.
    - Add option description to online help.
  * pg_ctlcluster: Improve POD.
  * pg_upgradecluster:
    - Initial framework for handling obsolete configuration parameters.
    - Handle transition of {tcpip_socket, virtual_host} -> listen_addresses.
  * debian/init.d-functions: If /lib/lsb/init-functions is available, use LSB
    init script functions.
  * pg_ctlcluster: After start, check whether the cluster is really running.
    If it does not come up after 5 seconds, fail and print the recent log
    portion.

 -- Martin Pitt <mpitt@debian.org>  Tue, 31 May 2005 12:16:26 +0200

postgresql-common (11) experimental; urgency=low

  * pg_ctlcluster: Cleaned up variables.
  * Factored out change_ugid() to PgCommon.pm and use it in the scripts.
  * Added pg_maintenance(8) program.
  * Activated formerly disabled postgresql-common.cron.d which calls
    pg_maintenance.